--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                             <th>No.</th>
                             <th>Component</th>
                             <th>Comp. Type</th>
-                            <th>Mandatory Default Value</th>
+                            <th>Mandatory</th>
+                            <th>Default Value</th>
                             <th>Description</th>
                             <th>PD-Database-Column</th>
                         </tr>
@@ -76,9 +77,10 @@
                         <tr>
                             <td scope="row">1</td>
                             <td>Truy vấn thông tin Toà Nhà</td>
+                            <td>Breadscrumbs</td>
+                            <td>NA</td>
                             <td>NA</td>
                             <td>Truy vấn thông tin Toà Nhà được chọn</td>
-                            <td>NA</td>
                             <td>
                                 <ul>
                                     <li>Database: N/A</li>
