--- a/index.html
+++ b/index.html
@@ -21,95 +21,135 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <header class="header__content">
-        <nav class="d-flex justify-content-around align-items-center">
-            <!-- Nav pills -->
-            <div>LOGO</div>
-            <div>
-                <ul class="nav nav-pills ">
-                    <li class="nav-item">
-                        <a class="nav-link active" data-toggle="pill" href="#home">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="pill" href="#menu1">Activity Diagram</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="pill" href="#menu2">Mockup</a>
-                    </li>
-                </ul>
+    <div class="wrapper">
+        <!-- Sidebar  -->
+        <nav id="sidebar">
+            <div class="sidebar-header">
+                <h3>USER GUIDE</h3>
             </div>
-            <div>
-                <ul>
-                    <li class="list-unstyled">
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                    </li>
-                </ul>
-            </div>
+
+            <ul class="list-unstyled components">
+                <p><a href="#">About</a></p>
+                <li class="active">
+                    <a href="#pageMenu1" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
+                    <ul class="nav nav-tabs collapse list-unstyled" id="pageMenu1">
+                        <li>
+                            <a data-toggle="tab" href="#home">Home 1</a>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#menu1">Home 2</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#pageMenu2" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Activity
+                        Diagram</a>
+                    <ul class="nav nav-tabs collapse list-unstyled" id="pageMenu2">
+                        <li>
+                            <a href="#DiagramSub1" data-toggle="collapse" aria-expanded="false"
+                                class="dropdown-toggle">Activity Diagram 1</a>
+                            <ul class="nav nav-tabs collapse list-unstyled" id="DiagramSub1">
+                                <li>
+                                    <a class="childSub" data-toggle="tab" href="#">Activity Sub1</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">Activity Diagram 2</a>
+                        </li>
+                        <li>
+                            <a href="#">Activity Diagram 3</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#pageMenu3" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Mockup</a>
+                    <ul class="nav nav-tabs collapse list-unstyled" id="pageMenu3">
+                        <li>
+                            <a href="#">Mockup 1</a>
+                        </li>
+                        <li>
+                            <a href="#">Mockup 2</a>
+                        </li>
+                        <li>
+                            <a href="#">Mockup 3</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
         </nav>
 
-        <!-- Tab panes -->
-        <div class="tab-content mt-5">
-            <div class="tab-pane container active" id="home">HOME</div>
-            <div class="tab-pane container fade" id="menu1">
-                <img class="img-fluid" src="./img/cauhinhphongtabtang.png" alt="cauhinhphongtabtang">
+        <!-- Page Content  -->
+        <div id="content">
+
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <button class="btn btn-primary" id="sidebarCollapse">
+                        <i class="fas fa-align-left"></i>
+                        <span>Table Of Contents</span>
+                    </button>
+                    <div class="input-search d-flex align-items-center">
+                        <div class="form-inline">
+                            <input class="form-control" type="search" name="" id="">
+                        </div>
+                        <button class="btn btn-primary">
+                            <i class="fas fa-search"></i>
+                        </button>
+                    </div>
+                </div>
+            </nav>
+
+            <div class="tab-content">
+                <div id="home" class="tab-pane fade in active">
+                    <h3>HOME</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </div>
+                <div id="menu1" class="tab-pane fade">
+                    <h3>Menu 1</h3>
+                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat.</p>
+                </div>
+                <div id="menu2" class="tab-pane fade">
+                    <h3>Menu 2</h3>
+                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+                        totam rem aperiam.</p>
+                </div>
+                <div id="menu3" class="tab-pane fade">
+                    <h3>Menu 3</h3>
+                    <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+                        explicabo.</p>
+                </div>
             </div>
-            <div class="tab-pane container fade" id="menu2">
-                <img class="img-fluid" src="./img/mockuptoanha.png" alt="mockuptoanha">
-                <table class="table mt-5">
-                    <thead>
-                        <tr>
-                            <th>No.</th>
-                            <th>Component</th>
-                            <th>Comp. Type</th>
-                            <th>Mandatory</th>
-                            <th>Default Value</th>
-                            <th>Description</th>
-                            <th>PD-Database-Column</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td scope="row">1</td>
-                            <td>Truy vấn thông tin Toà Nhà</td>
-                            <td>Breadscrumbs</td>
-                            <td>NA</td>
-                            <td>NA</td>
-                            <td>Truy vấn thông tin Toà Nhà được chọn</td>
-                            <td>
-                                <ul>
-                                    <li>Database: N/A</li>
-                                    <li>Table: N/A</li>
-                                    <li>Column: N/A</li>
-                                </ul>
-                            </td>
-                        </tr>
-                        <!-- <tr>
-                            <td scope="row"></td>
-                            <td></td>
-                            <td></td>
-                        </tr> -->
-                    </tbody>
-                </table>
-            </div>
+
         </div>
-    </header>
+    </div>
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    <!-- Popper.JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
+        integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
+        integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
         crossorigin="anonymous"></script>
+    <!-- jQuery Custom Scroller CDN -->
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
+    <!-- Main script -->
+    <script src="./src/main.js"></script>
 </body>
 
 </html>
