--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
                                 class="dropdown-toggle">S02.1-Dashboard</a>
                             <ul class="nav nav-tabs collapse list-unstyled" id="dashboard">
                                 <li>
-                                    <a data-toggle="tab" href="#dashboardhome">Home</a>
+                                    <a data-toggle="tab" class="pl5" href="#dashboardhome">Home</a>
                                 </li>
                                 <li>
-                                    <a data-toggle="tab" href="#dashboarddiagram">Activity Diagram</a>
+                                    <a data-toggle="tab" class="pl5" href="#dashboarddiagram">Activity Diagram</a>
                                 </li>
                                 <li>
-                                    <a data-toggle="tab" href="#dashboardmockup">Mockup</a>
+                                    <a data-toggle="tab" class="pl5" href="#dashboardmockup">Mockup</a>
                                 </li>
                                 <!-- <li>
                                 <a href="#">Mockup 3</a>
