--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
             <ul class="list-unstyled components">
                 <p><a href="#">About</a></p>
                 <li class="active">
-                    <a href="#pageMenu1" data-toggle="collapse" aria-expanded="false"
-                        class="dropdown-toggle">S01-Login</a>
+                    <a href="#pageMenu1" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Login</a>
                     <ul class="nav nav-tabs collapse list-unstyled" id="pageMenu1">
                         <li>
                             <a data-toggle="tab" href="#loginhome">Home</a>
@@ -73,11 +72,11 @@
                 </li> -->
                 <li>
                     <a href="#pageMenu3" data-toggle="collapse" aria-expanded="false"
-                        class="dropdown-toggle">S02-Dashboard</a>
+                        class="dropdown-toggle">Dashboard</a>
                     <ul class="nav nav-tabs collapse list-unstyled" id="pageMenu3">
                         <li>
                             <a href="#dashboard" data-toggle="collapse" aria-expanded="false"
-                                class="dropdown-toggle">S02.1-Dashboard</a>
+                                class="dropdown-toggle">S02.0-Dashboard</a>
                             <ul class="nav nav-tabs collapse list-unstyled" id="dashboard">
                                 <li>
                                     <a data-toggle="tab" class="pl5" href="#dashboardhome">Home</a>
@@ -94,10 +93,10 @@
                             </ul>
                         </li>
                         <li>
-                            <a data-toggle="tab" href="#dashboarddiagram">S02.2- Notification</a>
+                            <a data-toggle="tab" href="#dashboarddiagram">S02.1- Notification</a>
                         </li>
                         <li>
-                            <a data-toggle="tab" href="#dashboardmockup">S02.3- Message</a>
+                            <a data-toggle="tab" href="#dashboardmockup">S02.2- Message</a>
                         </li>
                         <li>
                             <a data-toggle="tab" href="#dashboardmockup">S02.3- Search</a>
@@ -112,8 +111,7 @@
 
                 </li>
                 <li>
-                    <a href="#pageMenu4" data-toggle="collapse" aria-expanded="false"
-                        class="dropdown-toggle">S03-Phòng</a>
+                    <a href="#pageMenu4" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Phòng</a>
                     <ul class="nav nav-tabs collapse list-unstyled" id="pageMenu4">
                         <li>
                             <a href="#">Activity Diagram</a>
@@ -124,6 +122,53 @@
                         <!-- <li>
                             <a href="#">Mockup 3</a>
                         </li> -->
+                    </ul>
+                </li>
+                <li class="active">
+                    <a href="#cauhinhmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Cấu
+                        hình</a>
+                    <ul class="nav nav-tabs collapse list-unstyled" id="cauhinhmenu">
+                        <li>
+                            <a href="#hotelapart" data-toggle="collapse" aria-expanded="false"
+                                class="dropdown-toggle">S07.0- Hotel/Apartment</a>
+                            <ul class="nav nav-tabs collapse list-unstyled" id="hotelapart">
+                                <li>
+                                    <a data-toggle="tab" class="pl5" href="#hahome">Home</a>
+                                </li>
+                                <li>
+                                    <a data-toggle="tab" class="pl5" href="#hadiagram">Activity Diagram</a>
+                                </li>
+                                <li>
+                                    <a data-toggle="tab" class="pl5" href="#hamockup">Mockup</a>
+                                </li>
+
+                            </ul>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#">S07.1- Phòng</a>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#">S07.2- Tiền Tệ</a>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#">S07.3- Quyền</a>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#">S07.4- Nhân viên</a>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#">S07.5- Promotion</a>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#">S07.6- Tax</a>
+
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#">S07.7- CRM</a>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#">S07.8- OTA</a>
+                        </li>
                     </ul>
                 </li>
                 <li>
@@ -275,6 +320,21 @@
                     <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
                         explicabo.</p>
                 </div> -->
+                <!-- Noi dung trang Hotel/Apartment -->
+                <div id="hahome" class="tab-pane fade in active">
+                    <h3>HOME</h3>
+                    <p>màn hotel</p>
+                </div>
+                <div id="hadiagram" class="tab-pane fade in active">
+                    <h3>Activity Diagram</h3>
+                    <p>
+                    <p><img src="./Images/diagram/dashboard.png" class="img-fluid" alt="Responsive image"></p>.
+                    </p>
+                </div>
+                <div id="hamockup" class="tab-pane fade in active">
+                    <h3>Mockup</h3>
+                    <p>Màn hình Dashboard.</p>
+                </div>
             </div>
 
         </div>
