remove active du

--- a/index.html
+++ b/index.html
@@ -105,11 +105,8 @@
                             <a href="#">Mockup 3</a>
                         </li> -->
                     </ul>
-
-
-
-
                 </li>
+
                 <li>
                     <a href="#pageMenu4" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Phòng</a>
                     <ul class="nav nav-tabs collapse list-unstyled" id="pageMenu4">
@@ -124,7 +121,8 @@
                         </li> -->
                     </ul>
                 </li>
-                <li class="active">
+                <!-- <li class="active"> -->
+                <li>
                     <a href="#cauhinhmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Cấu
                         hình</a>
                     <ul class="nav nav-tabs collapse list-unstyled" id="cauhinhmenu">
@@ -179,7 +177,6 @@
 
         <!-- Page Content  -->
         <div id="content">
-
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
                     <button class="btn btn-primary" id="sidebarCollapse">
@@ -300,18 +297,18 @@
                 </div>
 
                 <!-- Noi dung trang dashboard -->
-                <div id="dashboardhome" class="tab-pane fade in active">
+                <div id="dashboardhome" class="tab-pane fade in ">
                     <h3>HOME</h3>
                     <p>Màn hình Dashboard hiển thị nội dung tổng quan trên hotel/apartment hiện tại gồm Doanh Thu và
                         Công suất phòng</p>
                 </div>
-                <div id="dashboarddiagram" class="tab-pane fade in active">
+                <div id="dashboarddiagram" class="tab-pane fade in">
                     <h3>Activity Diagram</h3>
                     <p>
                     <p><img src="./Images/diagram/dashboard.png" class="img-fluid" alt="Responsive image"></p>.
                     </p>
                 </div>
-                <div id="dashboardmockup" class="tab-pane fade in active">
+                <div id="dashboardmockup" class="tab-pane fade in">
                     <h3>Mockup</h3>
                     <p>Màn hình Dashboard.</p>
                 </div>
@@ -321,17 +318,17 @@
                         explicabo.</p>
                 </div> -->
                 <!-- Noi dung trang Hotel/Apartment -->
-                <div id="hahome" class="tab-pane fade in active">
+                <div id="hahome" class="tab-pane fade in">
                     <h3>HOME</h3>
                     <p>màn hotel</p>
                 </div>
-                <div id="hadiagram" class="tab-pane fade in active">
+                <div id="hadiagram" class="tab-pane fade in">
                     <h3>Activity Diagram</h3>
                     <p>
                     <p><img src="./Images/diagram/dashboard.png" class="img-fluid" alt="Responsive image"></p>.
                     </p>
                 </div>
-                <div id="hamockup" class="tab-pane fade in active">
+                <div id="hamockup" class="tab-pane fade in">
                     <h3>Mockup</h3>
                     <p>Màn hình Dashboard.</p>
                 </div>
